fix content image align-self

--- a/src/styles/components/_models_flow.scss
+++ b/src/styles/components/_models_flow.scss
@@ -66,6 +66,7 @@
   img{
     height: 90vh;
     max-width: 1000px;
+    align-self: center;
   }
 }
 
